--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="universe-first universe-image images">
                         <div>
 
-                            <img src="/images/1-848_568.jpg" alt="">
+                            <img src="images/1-848_568.jpg" alt="">
                         </div>
                         <h3>About OPPO</h3>
                         <div class="buttons universe-button">
@@ -245,7 +245,7 @@
                     </div>
                     <div class="universe-middle universe-image images">
                         <div>
-                            <img src="/images/2-848_568.jpg" alt="">
+                            <img src="images/2-848_568.jpg" alt="">
 
                         </div>
                         <h3>Connect to the world around you with 5G</h3>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="universe-end universe-image images">
                         <div>
-                            <img src="/images/5-848_568.jpg" alt="">
+                            <img src="images/5-848_568.jpg" alt="">
 
                         </div>
                         <h3>Color OS 11: Make life flow</h3>
