--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="sub-section">
             <div class="sub-slidebar">
                 <div class="image">
-                    <img src="/images/pc-1028.jpg" alt="">
+                    <img src="images/pc-1028.jpg" alt="">
                 </div>
                 <div class="sub-content-area">
                     <h1>Reward Multiplier</h1>
